# github-releases

./: .dockerignore  .gitignore  .gitlab-ci.yml  .goreleaser.yaml  Dockerfile  LICENSE  README.md  app.py  entrypoint.sh  find.py  go.mod  go.sum  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml  release.yml
alembic/: env.py
alembic/versions/: 27c7073b265a_initial_migration.py
cmd/githubrel/: main.go
github-releases/: main.py
github_releases/: github_api.py  main.py  test_github.py
github_releases/api/: models.py  routes.py
github_releases/core/: config.py
github_releases/services/: github.py
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  secrets.yaml  service.yaml
internal/output/: formatter.go  formatter_test.go  types.go
pkg/github/: client.go  client_test.go  types.go
pkg/mcp/: server.go  tools.go  types.go
plugins/: plugin.go  registry.go
plugins/bulk/: bulk.go
plugins/get/: get.go
plugins/history/: history.go
src/github_releases/: main.py  test_github.py
src/github_releases/api/: models.py  routes.py
src/github_releases/core/: config.py  github_api.py
src/github_releases/services/: github.py
